...
    //title
    <string name="app_name">AppFood</string>
    <string name="home">Trang chủ</string>
    <string name="menu">Danh mục</string>
    <string name="introduce">Giới thệu chung</string>
    <string name="contact">Liên hệ</string>
    <string name="cart">Giỏ hàng</string>
    <string name="checkout">Thanh toán</string>
    <string name="notify">Thông báo</string>
    <string name="introduce_info_top">Thông tin về nhà hàng</string>
    <string name="res_name">Nhà hàng Lâm Gia</string>
    <string name="res_address">279 Nguyễn Tri Phương, P.5, Q.10, TP.HCM</string>
    <string name="res_phone">0346 066 476</string>
...
    <string name="continue_buy">Tiếp tục chọn món</string>
    <string name="buy">Chọn món</string>
    <string name="menu_detail_title">Chi tiết danh mục</string>
    <string name="food_detail_title">Chi tiết món</string>

    <string name="checkout_info">Thông tin thanh toán</string>
    <string name="user_name">Tên khách hàng</string>
    <string name="address">Địa chỉ</string>
    <string name="user_phone">Số điện thoại</string>
    <string name="user_note">Ghi chú</string>
    <string name="type_user_name">Nhập tên khách hàng</string>
    <string name="type_user_address">Vd: 123 Hoà Hảo, P.12, Q.10</string>
    <string name="type_user_phone">Nhập số điện thoại</string>
    <string name="type_user_note">Nhập lời nhắn...</string>

    /label button
...

    //thông báo!!!
    <string name="error_network">Không có Internet!</string>
    <string name="error_server">Không thể kết nối với Server!</string>
    <string name="empty_cart_notify">Giỏ hàng trống!</string>
    <string name="validation">Vui lòng nhập đầy đủ thông tin!</string>
    <string name="none_name">Vui lòng nhập tên khách hàng!</string>
    <string name="none_address">Vui lòng nhập địa chỉ!</string>
    <string name="none_phone">Vui lòng nhập số điện thoại!</string>
    <string name="overload_phone">Số điện thoại không được vượt quá</string>
    <string name="char_style">ký tự</string>
    <string name="add_success">Thêm giỏ hàng thành công!</string>

    <string name="order_send_success">Thành công!</string>
    <string name="order_send_success_show">Thành công</string>
    <string name="order_send_error">Lỗi khi gửi đơn hàng!</string>
    <string name="empty_cart">Vui lòng chọn món trước khi đặt hàng!</string>
    <string name="ask_to_delete">Bạn muốn xóa món này?</string>
    <string name="mess_send_success">Đã gửi thành công!</string>
    <string name="mess_send_error">Gửi không thành công!</string>
    <string name="order_success">Đơn hàng của bạn đã được gửi đi!</string>

    //link hình ảnh
...
