...
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tenmon_giohang"
                    android:paddingTop="@dimen/padding_text"
                    android:singleLine="true"
                    android:textColor="@color/primary"
                    android:text="Ten mon"
                    android:textSize="@dimen/text_size_title"
                    android:textStyle="bold"
...
                        android:paddingTop="@dimen/padding_2"
                        android:paddingBottom="@dimen/padding_1"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/tru_giohang"
                            android:src="@drawable/ic_sub"
                            android:layout_marginRight="5dp"
                            android:padding="5dp"
                            android:background="@drawable/custom_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/soluong_mon"
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            android:background="@drawable/custom_quantity_cart"
                            android:paddingTop="@dimen/padding_1"
                            android:paddingBottom="@dimen/padding_1"
                            android:text="0"
                            android:textColor="@color/black"
                            android:layout_width="@dimen/background_quantity_cart_width"
                            android:layout_height="wrap_content"/>
                        <ImageView
                            android:id="@+id/cong_giohang"
                            android:src="@drawable/ic_add"
                            android:layout_marginLeft="5dp"
                            android:padding="5dp"
                            android:background="@drawable/custom_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <FrameLayout
                            android:id="@+id/xoa_giohang"
                            android:layout_gravity="bottom|right"
                            android:backgroundTint="@color/fifth"
                            android:layout_width="@dimen/wrap_icon_delete_size"
                            android:layout_height="@dimen/wrap_icon_delete_size">
                            <ImageView
                                android:layout_gravity="center"
...
                    <RelativeLayout
                        android:layout_gravity="center"
                        android:paddingTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/btn_yes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_1"
                            android:layout_marginRight="@dimen/margin_1_2"
                            android:background="@drawable/custom_button"
                            android:gravity="center"
...
                            android:text="@string/yes"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/btn_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_1_2"
                            android:layout_marginRight="@dimen/margin_1"
                            android:layout_toEndOf="@+id/btn_yes"
                            android:background="@drawable/custom_button_transparent"
...
