...
                                    android:text="@string/total_price"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/text_size_title"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textview_tongtien"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="end"
                                    android:layout_marginRight="@dimen/margin_total_price"
                                    android:text="150,000 đ"
                                    android:textColor="@color/cost_color"
...
                                    android:paddingBottom="@dimen/padding_2"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/gray_dark"
                                    android:textSize="@dimen/text_size" />

                                <TextView
                                    android:id="@+id/message_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/margin_2"
                                    android:layout_marginRight="@dimen/margin_1"
                                    android:text="@string/none_name"
                                    android:textColor="@color/red"
...
                                    android:layout_margin="@dimen/margin_1_2"
                                    android:text="@string/address"
                                    android:textColor="@color/second"
                                    android:textStyle="bold" />

                                <EditText
                                    android:id="@+id/user_address"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/margin_1"
                                    android:layout_marginRight="@dimen/margin_1"
                                    android:layout_marginBottom="@dimen/margin_1_2"
                                    android:background="@drawable/custom_input"
...
                                    android:paddingBottom="@dimen/padding_2"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/gray_dark"
                                    android:textSize="@dimen/text_size" />

                                <TextView
                                    android:id="@+id/message_address"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/margin_2"
                                    android:layout_marginRight="@dimen/margin_1"
                                    android:text="@string/none_address"
                                    android:textColor="@color/red"
...
                                    android:paddingBottom="@dimen/padding_2"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/gray_dark"
                                    android:textSize="@dimen/text_size" />

                                <TextView
                                    android:id="@+id/message_phone"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/margin_2"
                                    android:layout_marginRight="@dimen/margin_1"
                                    android:text="@string/none_phone"
                                    android:textColor="@color/red"
...

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btn_xacnhanthanhtoan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/card_info"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_2"
                    android:layout_marginTop="@dimen/margin_1"
...
