...
                            android:text="@string/order_send_success_show"
                            android:layout_marginBottom="@dimen/margin_1_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/txt_tongtien"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_1"
                        android:layout_gravity="center"
                        android:text="150,000 đ"
                        android:textColor="@color/cost_color"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:textColor="@color/second"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/txt_tenkhachhang"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_1_2"
                        android:layout_marginBottom="@dimen/margin_1"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Địa chỉ"
                        android:textColor="@color/second"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/txt_address"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_1_2"
                        android:layout_marginBottom="@dimen/margin_1"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_phone"
                        android:textColor="@color/second"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/txt_sodienthoai"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_1_2"
                        android:layout_marginBottom="@dimen/margin_1"
...
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_1_2"
                        android:text="@string/user_note"
                        android:textColor="@color/second"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/txt_ghichu"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:textSize="@dimen/text_size"
                        android:layout_marginBottom="@dimen/margin_1_2"
                        android:ellipsize="end"
...
